--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -636,6 +636,7 @@ video {
 }
 
 .nav-item{
+  border-radius: 0.375rem;
   padding: 0.5rem;
   --tw-text-opacity: 1;
   color: rgba(67, 56, 202, var(--tw-text-opacity));
@@ -646,6 +647,17 @@ video {
     display: flex;
     flex-direction: row;
     align-items: center;
+  }
+}
+
+@media (min-width: 1024px){
+  .nav-item:hover{
+    --tw-bg-opacity: 1;
+    background-color: rgba(224, 231, 255, var(--tw-bg-opacity));
+  }
+
+  .nav-item{
+    padding: 0.75rem;
   }
 }
 
